[gd_scene load_steps=5 format=3 uid="uid://dyrp0b4i6ip3q"]

[ext_resource type="Script" path="res://environment/destroyable_block.gd" id="1_fw5cc"]
[ext_resource type="Texture2D" uid="uid://elrmx1irnvi6" path="res://assets/level/DARK Edition Tileset No background-sheet.png" id="1_pwfig"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb5iq"]
size = Vector2(8, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7s8d"]
size = Vector2(6, 7)

[node name="DestroyableBlock" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("1_fw5cc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_pb5iq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]

[node name="FallTimer" type="Timer" parent="."]
one_shot = true

[node name="Block" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_t7s8d")

[node name="Sprite2D" type="Sprite2D" parent="Block"]
texture = ExtResource("1_pwfig")
region_enabled = true
region_rect = Rect2(32, 144, 8, 8)

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="timeout" from="FallTimer" to="Area2D" method="_on_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="Area2D" method="_on_destroy_timer_timeout"]
